# python-project-template

./: .custom.env  .env.sample  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  README2.md  example.env  pyproject.toml
.github/workflows/: badge-refresh.yml  tests.yml
docs/: README.md  cli_architecture.md  core_logic.md  debug.md  debug_diagnostics.md  env-logging-scenarios.html  env-logging-scenarios.md  logging_system.md  settings.md  unit_test_design.md  unit_tests_design.md
logs/: log_test.py
logs/dev/: info.log.1  info.log.2
logs/prod/: info.log.1
logs/uat/: info.log.1
publish/: .pypirc.sample
src/myproject/: __main__.py  cache.py  cli.py  cli_color_utils.py  cli_logger_utils.py  constants.py  core.py  main.py  settings.py  types.py
src/myproject/cli/: __init__.py  args.py  cli_main.py  diagnostics.py  handlers.py  parser.py  utils.py  utils_color.py  utils_logger.py
tests/: conftest.py  test_cache.py  test_cli.py  test_cli_colors.py  test_cli_env.py  test_cli_logger_utils.py  test_core.py  test_lib.py  test_log.py  test_settings.py  utils.py
tests/cli/: test_args.py  test_cli_logger_utils.py  test_cli_main.py  test_core.py  test_diagnostics.py  test_handlers.py  test_main.py  test_parser.py  test_utils_color.py  test_utils_logger.py
tests/cli/old/: test_log.py
tests/cli/old/cli/: test_cli_logger_utils.py
tests/manual/: demo.ipynb  demo_old.ipynb
