[project]
name = "myproject"
dynamic = ["version"]
description = "A modern Python project template with optional CLI support."
authors = [
  {name = "Your Name", email = "your@email.com"}
]
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.9"

dependencies = [
  "colorama>=0.4.0",
  "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
  "build",
  "coverage==7.5.0",
  "coveralls>=3.3.2 ; python_version < '3.13'",
  "colorama",
  "python-dotenv",
  "mypy",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "twine",
  "types-colorama",
  "ruff"
]

[project.scripts]
myproject = "myproject.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "myproject.__version__" }

[tool.mypy]
exclude = "\\.ipynb$"
strict = true
ignore_missing_imports = true

[tool.ruff]
exclude = ["tests/manual/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--maxfail=1 -v"
filterwarnings = [
  "ignore::pytest.PytestUnhandledThreadExceptionWarning"
]